Add scope-aware runtime variable semantics